added date range picker

--- a/app/globals.css
+++ b/app/globals.css
@@ -212,3 +212,14 @@ body {
 
     /* Do not remove */
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+    }
+  body {
+    @apply bg-background text-foreground;
+    }
+}
