--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,19 @@ body {
     font-size: 16px;
 }
 
+/* Remove the stepper arrows in input fields with type number */
+/* For Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* For Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 @layer base {
     :root {
         --background: 0 0% 100%;
