--- a/app/globals.css
+++ b/app/globals.css
@@ -232,3 +232,18 @@ input[type=number] {
         @apply bg-background text-foreground;
     }
 }
+
+#fade-In {
+    opacity: 0;
+    animation: fadeIn 0.5s ease-in-out forwards;
+}
+
+@keyframes fadeId {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
